GH-0000 Add bounded cold sketch evidence